Updated '/_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
 title: J O H N  T  G R A Y
-email: your-email@domain.com
+email: tgray.it@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Born and raised in central Alabama, I have a passion for designing and developing for the web and a propensity for consistent branding.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://johntgray.com" # the base hostname & protocol for your site
+twitter_username: jtgry
+github_username:  jtgry
 
 # Build settings
 markdown: kramdown
