--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: J O H N  T  G R A Y
+title: JOHN T GRAY | BUILT IN THE SOUTH
 email: tgray.it@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Born and raised in central Alabama, I have a passion for designing and developing for the web and a propensity for consistent branding.
